Fix navigation z-index

--- a/src/Components/Navigation.scss
+++ b/src/Components/Navigation.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: stretch;
+
 }
 
 .navigationItem {
@@ -28,7 +29,7 @@
     background-color: white;
     align-items: center;
     position: absolute;
-    z-index: 1;
+
 
     .burger {
         position: absolute;
@@ -50,6 +51,8 @@
         width: 100vw;
         top: 0;
         left: 0;
+        z-index: 10;
+        border-bottom: 1px solid black;
     }
 
     #home {
